# FerrumEmail

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  INTEGRATION.md  LICENSE-APACHE  LICENSE-MIT  PRD.md  PROGRESS.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/ferrum-email/: Cargo.toml  README.md
crates/ferrum-email-cli/: Cargo.toml
crates/ferrum-email-cli/src/: main.rs
crates/ferrum-email-components/: Cargo.toml  README.md
crates/ferrum-email-components/src/: body.rs  button.rs  code.rs  column.rs  container.rs  head.rs  heading.rs  hr.rs  html.rs  image.rs  lib.rs  link.rs  preview.rs  row.rs  section.rs  spacer.rs  text.rs
crates/ferrum-email-core/: Cargo.toml  README.md
crates/ferrum-email-core/src/: color.rs  component.rs  lib.rs  node.rs  spacing.rs  style.rs  types.rs
crates/ferrum-email-macros/: Cargo.toml
crates/ferrum-email-macros/src/: lib.rs
crates/ferrum-email-preview/: Cargo.toml
crates/ferrum-email-preview/src/: lib.rs
crates/ferrum-email-render/: Cargo.toml  README.md
crates/ferrum-email-render/src/: css_inliner.rs  html_emitter.rs  lib.rs  renderer.rs  text_extractor.rs
crates/ferrum-email-send/: Cargo.toml  README.md
crates/ferrum-email-send/src/: error.rs  lib.rs  message.rs  provider.rs  sender.rs  shield.rs  vault.rs
crates/ferrum-email-send/src/providers/: console.rs  direct.rs  mod.rs  smtp.rs
crates/ferrum-email-send/tests/: integration.rs
crates/ferrum-email-tui/: Cargo.toml
crates/ferrum-email-tui/src/: app.rs  auth.rs  main.rs  templates.rs  theme.rs  ui.rs
crates/ferrum-email/src/: lib.rs
examples/password-reset/: Cargo.toml
examples/password-reset/src/: main.rs
examples/welcome/: Cargo.toml
examples/welcome/src/: main.rs
tools/nexus-relay/src/: main.rs
