[workspace]
resolver = "2"
members = [
    "crates/ferrum-email-core",
    "crates/ferrum-email-components",
    "crates/ferrum-email-render",
    "crates/ferrum-email-send",
    "crates/ferrum-email-tui",
    "crates/ferrum-email",
    "examples/welcome",
    "examples/password-reset",
]
# Phase 2/3 crates (not yet implemented, excluded from workspace):
# "crates/ferrum-email-preview"
# "crates/ferrum-email-macros"
# "crates/ferrum-email-cli"
exclude = [
    "tools/*",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Andrew Jewell Sr. <devops@automatanexus.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AutomataNexus/ferrum-email"
homepage = "https://ferrum-mail.com"
description = "Component-based email framework for Rust"
keywords = ["email", "email-templates", "smtp", "transactional-email", "rust"]
categories = ["email", "web-programming"]

[workspace.dependencies]
ferrum-email-core = { path = "crates/ferrum-email-core", version = "0.1.1" }
ferrum-email-components = { path = "crates/ferrum-email-components", version = "0.1.1" }
ferrum-email-render = { path = "crates/ferrum-email-render", version = "0.1.1" }
ferrum-email-send = { path = "crates/ferrum-email-send", version = "0.1.1" }
ferrum-email-preview = { path = "crates/ferrum-email-preview", version = "0.1.1" }
ferrum-email-macros = { path = "crates/ferrum-email-macros", version = "0.1.1" }

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
