[package]
name = "ferrum-email-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for Ferrum Email — preview, render, validate, and send emails"

[[bin]]
name = "ferrum"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde_json = "1"
dirs = "6"
