[package]
name = "ferrum-email-send"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Email provider abstraction and sending API for Ferrum Email"

[features]
default = ["smtp"]
smtp = ["rustls", "tokio-rustls", "webpki-roots", "base64"]
vault = ["dep:aegis-vault"]

[dependencies]
ferrum-email-core.workspace = true
ferrum-email-render.workspace = true
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"], optional = true }
webpki-roots = { version = "0.26", optional = true }
base64 = { version = "0.22", optional = true }

# aegis-vault is resolved via [patch] in .cargo/config.toml locally,
# and will resolve from crates.io once published there.
aegis-vault = { version = "0.2.2", optional = true }

[dev-dependencies]
ferrum-email-components.workspace = true
