[package]
name = "ferrum-email-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Terminal UI dashboard for Ferrum Email — preview, send, and manage email templates"
publish = false

[[bin]]
name = "ferrum-tui"
path = "src/main.rs"

[dependencies]
ferrum-email-core.workspace = true
ferrum-email-components.workspace = true
ferrum-email-render.workspace = true
ferrum-email-send.workspace = true
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
