[package]
name = "ferrum-email"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Component-based email framework for Rust — type-safe templates, cross-client rendering, unified sending API. The complete SDK."
keywords = ["email", "email-templates", "smtp", "transactional-email", "rust"]
categories = ["email", "web-programming"]
readme = "README.md"

[features]
default = ["smtp", "shield"]
smtp = ["ferrum-email-send/smtp"]
shield = ["ferrum-email-send/shield"]
vault = ["ferrum-email-send/vault"]

[dependencies]
ferrum-email-core = { version = "0.1.1", path = "../ferrum-email-core" }
ferrum-email-components = { version = "0.1.1", path = "../ferrum-email-components" }
ferrum-email-render = { version = "0.1.1", path = "../ferrum-email-render" }
ferrum-email-send = { version = "0.1.1", path = "../ferrum-email-send" }
