[package]
name = "ferrum-email"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Component-based email framework for Rust — type-safe templates, cross-client rendering, unified sending API. The complete SDK."
readme = "README.md"

[features]
default = ["smtp", "shield"]
smtp = ["ferrum-email-send/smtp"]
shield = ["ferrum-email-send/shield"]
vault = ["ferrum-email-send/vault"]

[dependencies]
ferrum-email-core.workspace = true
ferrum-email-components.workspace = true
ferrum-email-render.workspace = true
ferrum-email-send.workspace = true
